i change coloure in working hours

--- a/index.html
+++ b/index.html
@@ -626,14 +626,14 @@
                 </div>
               </div>
               <div class="col-md ftco-animate">
-                 <div class="ftco-footer-widget mb-4">
+                 <div class="ftco-footer-widget mb-4"> 
                   <h2 class="ftco-heading-2">WORKING HOUR</h2>
                   <ul class="list-unstyled">
-                    <li><i>Monday-Friday</i></li>
+                    <li style="color: rgb(250, 248, 248);"><i>Monday-Friday</i></li>
                       <p>7:30am - 11:30pm</p>
-                    <li><i>Saturday-Sunday</i></li>
+                    <li style="color: rgb(250, 248, 248);"><i>Saturday-Sunday</i></li>
                       <p>7:00am - 1:30pm</p></li>
-                    <li>holiday</li>
+                    <li style="color: rgb(250, 248, 248);">holiday</li>
                       <p>7:00am-1:30pm</p>
                   </ul>
                 </div>
