--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="assets/css/icomoon.css">
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
-  <body data-spy="scroll" data-target="#ftco-navbar" data-offset="200">
+  <body data-spy="scroll" data-target="#ftco-navbar" data-offset="200" >
     
     <!-- start nav -->
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -48,7 +48,7 @@
     </nav>
     <!-- END nav -->
     <!-- start home section -->
-    <section class="ftco-cover" style="background-image: url(images/bg_3.jpg);" id="section-home">
+    <section class="ftco-cover" style="background-image: url(images/background.avif);" id="section-home">
       <div class="container">
         <div class="row align-items-center justify-content-center text-center ftco-vh-100">
           <div class="col-md-12">
@@ -83,7 +83,7 @@
           </div>
           <div class="col-md-1"></div>
           <div class="col-md-6 ftco-animate img" data-animate-effect="fadeInRight">
-            <img src="images/about_img_1.jpg">
+            <img src="images/chef cooker.jpg" class="img-fluid">
           </div>
         </div>
       </div>
